k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-mod-sample
  name: app-mod-sample
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 9080
      targetPort: 9080
  selector:
    app: app-mod-sample
