k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: app-mod-sample
  name: app-mod-sample
spec:
  path:
    /
  port:
    targetPort: http
  to:
    kind: Service
    name: app-mod-sample
    weight: 100
